Fix actions menu being cut off on mobile

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -353,3 +353,7 @@ button {
         display: none;
     }
 }
+
+.actions-menu-mobile + * .cdk-overlay-pane {
+    margin-right: 20px;
+}
